[tool.poetry]
name = "compiler-exploter"
version = "0.0.0"
description = "Online C++ compiler"
authors = ["Perseo <perseo.gi98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.42"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"

[tool.poetry.dev-dependencies]
black = "^24.2.0"
ruff = "^0.3.1"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
poetry-pre-commit-plugin = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "compiler_exploter.main:start"
test = "pytest:main"

[tool.ruff]
# Same as Black
line-length = 88

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".env",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "C90"]

# Never enforce `E501` (line length violations).
ignore = ["E501"]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]

# Assume Python 3.8
target-version = "py38"

# Ignore `E402` (import violations) in all `__init__.py` files, and in `path/to/file.py`.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.mypy]
ignore_missing_imports = true
